# english-editor

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.yaml  DEVELOPMENT.md  Dockerfile  Makefile  Makefile.security  README.md  asalto.txt  checkpoints.json  ci-metadata.json  config_generation_log.json  demo_analysis.py  demo_monolith.py  intruso.txt  mkdocs.yml  mypy.ini  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt  ruff.toml
.benchmarks/Linux-CPython-3.12-64bit/: 0001_32a682d89d4cb8f1a69588ce8c4d34488d34cf02_20260220_040051_uncommited-changes.json
.github/workflows/: ci-cd.yml  ci.yml  ci.yml.backup  devsecops-pipeline.yml  main-pipeline.yml  seguridad.yml
docs/: index.md
sandbox_demo/: checkpoints.json
sandbox_observability/: db.json
scripts/: ci_pipeline.py  demo_analysis.py
scripts/hooks/: protect_main.py
src/: .gitignore
src/english_editor/: archivo_peligroso.py  cli.py  test_hook_evidence.py
src/english_editor/core/: __init__.py  value_objects.py
src/english_editor/infrastructure/devsecops/: devsecops_orchestrator.py
src/english_editor/infrastructure/tools/: dependency_manager.py  dockerfile_builder.py  gitignore_builder.py  makefile_builder.py
src/english_editor/modules/: __init__.py
src/english_editor/modules/analysis/: __init__.py
src/english_editor/modules/analysis/application/: use_cases.py
src/english_editor/modules/analysis/domain/: exceptions.py  value_objects.py
src/english_editor/modules/analysis/domain/ports/: engine.py
src/english_editor/modules/analysis/infrastructure/: adapters.py  faster_whisper_adapter.py  observability.py  whisper_adapter.py
src/english_editor/modules/analysis/presentation/: cli.py
src/english_editor/modules/audio_generation/infrastructure/adapters/: edge_tts_adapter.py
src/english_editor/modules/orchestration/application/: use_cases.py
src/english_editor/modules/orchestration/domain/: entities.py  test_imports.py  value_objects.py
src/english_editor/modules/orchestration/domain/ports/: file_system.py  repository.py
src/english_editor/modules/orchestration/entry_points/: cli.py
src/english_editor/modules/orchestration/infrastructure/: adapters.py  observability.py
src/english_editor/modules/processing/infrastructure/audio/: generate_complex_audio.py
src/english_editor/modules/renderer/: demo_renderer.py
src/english_editor/modules/renderer/application/: __init__.py  use_cases.py
src/english_editor/modules/renderer/domain/: __init__.py  value_objects.py
src/english_editor/modules/renderer/domain/ports/: media_splicer.py
src/english_editor/modules/renderer/infrastructure/: __init__.py  adapters.py  cli.py
tests/core/: test_core_value_objects.py
tests/e2e/: conftest.py  test_analysis_e2e.py  test_orchestrator_e2e.py
tests/modules/: __init__.py
tests/modules/analysis/application/: test_use_cases.py
tests/modules/analysis/domain/: test_exceptions.py  test_value_objects.py
tests/modules/analysis/infrastructure/: test_adapters.py  test_faster_whisper_adapter.py  test_integration_whisper.py  test_observability.py  test_whisper_adapter.py
tests/modules/orchestration/application/: test_use_cases.py
tests/modules/orchestration/domain/: test_entities.py  test_value_objects.py
tests/modules/orchestration/infrastructure/: test_adapters.py
tests/modules/renderer/application/: test_use_cases.py
tests/modules/renderer/domain/: test_value_objects.py
tests/modules/renderer/infrastructure/: test_adapters.py  test_cli.py
tests/performance/: benchmark_whisper.py  test_benchmark_whisper.py
tests/security/: test_dast_cli.py
