# ============================================================
# 📦 METADATOS DEL BUILD SYSTEM v0.1.2
# Define cómo setuptools construye tu paquete desde el código fuente.
# ============================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]      # Dependencias centrales para compilar el paquete
build-backend = "setuptools.build_meta"       # Backend estándar y moderno para proyectos Python

# ============================================================
# 🧩 METADATOS DEL PROYECTO
# Información esencial para pip, PyPI y herramientas de packaging.
# ============================================================
[project]
name = "english_editor"                        # ✅ Normalizado: guiones → guiones bajos
version = "0.1.0"
description = "Monolito Modular Escalable: Arquitectura Basada en Slices (Scale-Ready)"
readme = "README.md"
requires-python = ">=3.9"                      # Versión mínima requerida para soportar tipado moderno
license = {text = "MIT"}                     # Licencia permisiva estándar para código abierto
authors = [
  {name = "Developer", email = "developer@example.com"}
]

# ------------------------------------------------------------
#  هست DEPENDENCIAS CORE (El corazón de la aplicación)
# Solo lo estrictamente necesario para el procesamiento matemático y de audio base.
# ------------------------------------------------------------
dependencies = [
    "numpy>=1.24.0",          # 🔢 Computación numérica: Base matemática indispensable para el manejo de matrices de audio.
    "librosa>=0.10.0",        # 🎵 Análisis de audio: Extrae características complejas (espectrogramas, tempo, pitch) de las señales.
    "soundfile>=0.12.0",      # 🔊 I/O de audio: Lectura y escritura rápida y sin pérdida de archivos (WAV, FLAC) vía libsndfile.
]

# ============================================================
# 📦 DEPENDENCIAS OPCIONALES (Arquitectura Vertical Slicing)
# Instalación recomendada para desarrollo local: pip install -e ".[dev,test,cli,speech]"
# ============================================================
[project.optional-dependencies]

# ------------------------------------------------------------
# 🗣 SLICE: PROCESAMIENTO DE LENGUAJE Y VOZ (Speech & IA)
# ------------------------------------------------------------
speech = [
    "openai-whisper>=20231117", # 🧠 IA Speech-to-Text: Modelos de OpenAI para transcripción y traducción de audio de alta precisión.
    "edge-tts>=6.1.9",          # 🗣 Texto a Voz moderno: Reemplaza a gTTS. Es asíncrono, ofrece voces más naturales de Microsoft Edge y elimina conflictos con dependencias CLI.
    "nest-asyncio>=1.6.0",      # 🪄 Permite asincronía anidada en Jupyter/Colab para el adaptador
]



# ------------------------------------------------------------
# 🖥 SLICE: INTERFAZ DE USUARIO (CLI)
# ------------------------------------------------------------
cli = [
    "typer>=0.12.0",            # ⌨️ Framework CLI: Construcción rápida de comandos en terminal con validación automática basada en anotaciones de tipo (Pydantic).
    "click>=8.2.1",             # ⚙️ Motor CLI: Forzamos la versión moderna para garantizar compatibilidad total y estable con Typer.
]

# ------------------------------------------------------------
# 🛠 GRUPO: HERRAMIENTAS DE DESARROLLO (Calidad estática)
# ------------------------------------------------------------
dev = [
  "pre-commit>=3.6.0",        # 🛡️ Git Hooks: Automatiza la ejecución de linters y formateadores antes de permitir un commit.
  "psutil>=5.9",              # 📊 Monitoreo OS: Acceso a métricas del sistema (RAM, CPU) ideal para perfilar el rendimiento.
  "pip-tools>=7.0",           # 🔒 Lock files: Permite compilar dependencias exactas (requirements.txt) para despliegues reproducibles.
  "ruff>=0.1",                # ⚡ Linter y Formateador ultra-rápido: Escrito en Rust, reemplaza a Flake8, Black e isort en una sola herramienta.
  "mypy>=1.0",                # 🔤 Type Checker: Analiza estáticamente el código buscando errores de tipo antes de la ejecución.
  "rich>=13.0",               # 🎨 Consola enriquecida: Renderiza tablas, barras de progreso y texto con formato/color en la terminal.
]

# ------------------------------------------------------------
# 🧪 GRUPO: TESTING Y CALIDAD DINÁMICA
# ------------------------------------------------------------
test = [
  "pytest>=8.0.0",            # 🟢 Framework Testing: El estándar moderno para escribir desde pruebas unitarias hasta e2e.
  "pytest-cov>=4.0",          # 📈 Cobertura: Mide qué porcentaje exacto de tu código fuente está siendo ejecutado por las pruebas.
  "pytest-sugar>=0.9",        # 🍬 UI para Pytest: Mejora visualmente la salida en consola con barras de progreso y checkmarks.
  "pytest-mock>=3.12.0",      # 🎭 Mocking: Facilita la simulación de componentes externos (ej. la API de IA) sin ejecutar código real.
  "pytest-timeout>=2.3.0",    # ⏱️ Control de tiempo: Falla automáticamente las pruebas si se quedan colgadas por un deadlock.
  "pytest-benchmark>=5.2.3",  # 🏎️ Rendimiento: Ejecuta código múltiples veces para medir tiempos de ejecución y detectar regresiones de velocidad.
]

# ------------------------------------------------------------
# 📚 GRUPO: DOCUMENTACIÓN
# ------------------------------------------------------------
docs = [
  # "mkdocs-material>=9.0",   # 📖 Generador de sitios estáticos para documentación técnica visualmente atractiva (Comentado hasta su uso).
]

# ============================================================
# 🔍 DESCUBRIMIENTO DE PAQUETES
# ============================================================
[tool.setuptools.packages.find]
where = ["src"]                # Directorio raíz donde reside el código fuente de los módulos

# ============================================================
# 🧪 CONFIGURACIÓN DE PYTEST
# ============================================================
[tool.pytest.ini_options]
pythonpath = ["src"]           # Permite a Pytest importar directamente desde 'src' sin instalar el paquete
testpaths = ["tests"]          # Define la carpeta exclusiva para descubrimiento de pruebas
markers = [
  "unit: Tests unitarios rápidos (mocks, sin I/O real)",
  "integration: Tests de integración (lentos, requieren ML y dependencias externas)",
  "e2e: pruebas end-to-end",
  "slow: Tests que tardan más de 1 segundo",
  "performance: Benchmarks y pruebas de carga o recursos"
]

addopts = [
  "-v",                        # Modo verboso para ver cada prueba individual
#  "--strict-markers",         # Evita errores tipográficos al registrar marcadores
#  "--tb=short",               # Resume los tracebacks para no saturar la consola
#  "--cov=src/english_editor", # Fija el objetivo de la cobertura
#  "--cov-report=term-missing",# Muestra qué líneas exactas faltan por probar
#  "--cov-report=html:htmlcov",# Exporta reporte visual de cobertura
#  "--cov-fail-under=80"       # Fija la calidad mínima obligatoria
]
console_output_style = "progress" # UI nativa de progreso (mejorada luego por pytest-sugar)
xfail_strict = true            # Considera un error real si un test marcado para fallar termina pasando
timeout = 300                  # Límite máximo de 5 minutos por prueba para evitar cuelgues infinitos


#configurado como un franco tirador de warnings
filterwarnings = [
    # 1. Ignorar auth de HuggingFace (Terceros)
    "ignore::UserWarning:huggingface_hub.utils._auth",

    # 2. Silenciar las quejas de sintaxis anticuada de pydub (Terceros)
    "ignore::SyntaxWarning:pydub.*",

    # 3. Silenciar el aviso de librosa sobre audioread que vimos en el test (Terceros)
    "ignore::FutureWarning:librosa.*",

    # 4. Ignorar deprecaciones genéricas SOLO si vienen de librerías instaladas
    "ignore::DeprecationWarning:.*(site-packages|dist-packages).*",

    # ✅ NOTA: Cualquier advertencia (Syntax, Deprecation, etc.) que se origine
    # en tu carpeta /src/english_editor SÍ se mostrará y no será ignorada.
]




#filterwarnings = [
#    "ignore::UserWarning:huggingface_hub.utils._auth",
#    "ignore::DeprecationWarning",
#]

# ============================================================
# 🧹 LINTING CON RUFF (Comentado para activación futura)
# ============================================================
#[tool.ruff]
#line-length = 88
#target-version = "py39"
#select = ["E", "F", "W", "I", "UP", "C4", "TID", "RUF"]
#ignore = ["E501"]

#[tool.ruff.format]
#quote-style = "double"
#indent-style = "space"
#skip-magic-trailing-comma = false

# ============================================================
# 🔤 TYPE CHECKING CON MYPY (Comentado para activación futura)
# ============================================================
#[tool.mypy]
#python_version = "3.9"
#warn_return_any = true
#warn_unused_configs = true
#disallow_untyped_defs = true
#check_untyped_defs = true
#no_implicit_optional = true
#strict_equality = true

# ============================================================
# 📊 CONFIGURACIÓN DE COBERTURA (Comentado para activación futura)
# ============================================================
#[tool.coverage.run]
#source = ["src/english_editor"]
#branch = true
#parallel = true

#[tool.coverage.report]
#fail_under = 80
#show_missing = true
#skip_covered = true
#exclude_lines = [
#  "pragma: no cover",
#  "if __name__ == .__main__.:",
#  "raise NotImplementedError",
#]
